--- a/Condition Monitoring of Hydraulic System/RandomForest.ipynb
+++ b/Condition Monitoring of Hydraulic System/RandomForest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "579888f4",
+   "id": "6a1bee5f",
    "metadata": {},
    "source": [
     "# Importing Modules"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "84889d40",
+   "id": "ba987135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "990c9d74",
+   "id": "73f77d34",
    "metadata": {},
    "source": [
     "# Loading Dataset"
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "b1d7b3e3",
+   "id": "b5d8be83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "5a6c5abd",
+   "id": "d98e24d6",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "99a85a60",
+   "id": "f9a7b521",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "1bfe09d6",
+   "id": "ce9107dc",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1034d72",
+   "id": "5c4f5855",
    "metadata": {},
    "source": [
     "# Assigning values to X and y"
@@ -775,7 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "fb294b9b",
+   "id": "faccc032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "e119407c",
+   "id": "1f39475f",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "4b74b324",
+   "id": "e9422272",
    "metadata": {},
    "outputs": [
     {
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502769f6",
+   "id": "81dc5864",
    "metadata": {},
    "source": [
     "# Splitting dataset to train and test"
@@ -1287,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "5675454b",
+   "id": "14686445",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "f38d497f",
+   "id": "ef2c569e",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "42da333d",
+   "id": "c9bc5e06",
    "metadata": {},
    "outputs": [
     {
@@ -1788,7 +1788,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "472ba6f5",
+   "id": "47df3cc2",
    "metadata": {},
    "outputs": [
     {
@@ -2112,7 +2112,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "91a9b459",
+   "id": "93db7de7",
    "metadata": {},
    "outputs": [
     {
@@ -2278,7 +2278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46d671ed",
+   "id": "4f441c84",
    "metadata": {},
    "source": [
     "# Initialize separate classifiers for each target variable"
@@ -2287,7 +2287,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5a335ae6",
+   "id": "03a22662",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2300,7 +2300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaca3cce",
+   "id": "7a716d44",
    "metadata": {},
    "source": [
     "# Fit each classifier on the corresponding target variable"
@@ -2308,10 +2308,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1ee56673",
+   "execution_count": 47,
+   "id": "2645ebc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-2 {color: black;}#sk-container-id-2 pre{padding: 0;}#sk-container-id-2 div.sk-toggleable {background-color: white;}#sk-container-id-2 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-2 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-2 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-2 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-2 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-2 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-2 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-2 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-2 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-2 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-2 div.sk-item {position: relative;z-index: 1;}#sk-container-id-2 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-2 div.sk-item::before, #sk-container-id-2 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-2 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-2 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-2 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-2 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-2 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-2 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-2 div.sk-label-container {text-align: center;}#sk-container-id-2 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-2 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier()"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nb_cooler.fit(X_train, y_train['y_coolerCondition'])\n",
     "nb_valve.fit(X_train, y_train['y_valveCondition'])\n",
@@ -2322,7 +2336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c9504e4",
+   "id": "a6d304eb",
    "metadata": {},
    "source": [
     "# Make predictions on the test data for each classifier"
@@ -2330,8 +2344,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5c3a6957",
+   "execution_count": 48,
+   "id": "287f73dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2344,7 +2358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29517cce",
+   "id": "311d0361",
    "metadata": {},
    "source": [
     "# Evaluate the performance for each classifier"
@@ -2352,8 +2366,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a8e60cb3",
+   "execution_count": 49,
+   "id": "c4b0fab4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2366,7 +2380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a36f8ef1",
+   "id": "ba1c9754",
    "metadata": {},
    "source": [
     "# Print results"
@@ -2374,10 +2388,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8b0c532d",
+   "execution_count": 50,
+   "id": "fa828e01",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy - Cooler Condition: 0.9977324263038548\n",
+      "Accuracy - Valve Condition: 0.9750566893424036\n",
+      "Accuracy - Pump Leak: 0.9886621315192744\n",
+      "Accuracy - Hydraulic Acc: 0.9795918367346939\n",
+      "Accuracy - Stable Flag: 0.9841269841269841\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Accuracy - Cooler Condition:\",accuracy_cooler)\n",
     "print(\"Accuracy - Valve Condition:\",accuracy_valve)\n",
@@ -2387,9 +2413,177 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "301d9be0",
+   "metadata": {},
+   "source": [
+    "# Generate classification reports and confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "9c938705",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report_cooler = classification_report(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "matrix_cooler = confusion_matrix(y_test['y_coolerCondition'], y_pred_cooler)\n",
+    "\n",
+    "report_valve = classification_report(y_test['y_valveCondition'], y_pred_valve)\n",
+    "matrix_valve = confusion_matrix(y_test['y_valveCondition'], y_pred_valve)\n",
+    "\n",
+    "report_pump = classification_report(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "matrix_pump = confusion_matrix(y_test['y_pumpLeak'], y_pred_pump)\n",
+    "\n",
+    "report_hydraulic = classification_report(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "matrix_hydraulic = confusion_matrix(y_test['y_hydraulicAcc'], y_pred_hydraulic)\n",
+    "\n",
+    "report_stable = classification_report(y_test['y_stableFlag'], y_pred_stable)\n",
+    "matrix_stable = confusion_matrix(y_test['y_stableFlag'], y_pred_stable)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d99f8213",
+   "metadata": {},
+   "source": [
+    "# Print classification reports and confusion matrices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "dfffe4d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classification Report - Cooler Condition:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           3       1.00      1.00      1.00       156\n",
+      "          20       0.99      1.00      1.00       145\n",
+      "         100       1.00      0.99      1.00       140\n",
+      "\n",
+      "    accuracy                           1.00       441\n",
+      "   macro avg       1.00      1.00      1.00       441\n",
+      "weighted avg       1.00      1.00      1.00       441\n",
+      "\n",
+      "Confusion Matrix - Cooler Condition:\n",
+      "[[156   0   0]\n",
+      " [  0 145   0]\n",
+      " [  0   1 139]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Valve Condition:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          73       0.97      0.97      0.97        70\n",
+      "          80       0.92      0.96      0.94        73\n",
+      "          90       0.97      0.93      0.95        72\n",
+      "         100       1.00      1.00      1.00       226\n",
+      "\n",
+      "    accuracy                           0.98       441\n",
+      "   macro avg       0.96      0.96      0.96       441\n",
+      "weighted avg       0.98      0.98      0.98       441\n",
+      "\n",
+      "Confusion Matrix - Valve Condition:\n",
+      "[[ 68   2   0   0]\n",
+      " [  2  70   1   0]\n",
+      " [  0   4  67   1]\n",
+      " [  0   0   1 225]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Pump Leak:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       1.00      1.00      1.00       252\n",
+      "           1       0.97      0.98      0.98       101\n",
+      "           2       0.98      0.98      0.98        88\n",
+      "\n",
+      "    accuracy                           0.99       441\n",
+      "   macro avg       0.98      0.98      0.98       441\n",
+      "weighted avg       0.99      0.99      0.99       441\n",
+      "\n",
+      "Confusion Matrix - Pump Leak:\n",
+      "[[251   1   0]\n",
+      " [  0  99   2]\n",
+      " [  0   2  86]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Hydraulic Acc:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          90       0.99      0.98      0.99       153\n",
+      "         100       0.94      0.99      0.96        88\n",
+      "         115       0.97      0.93      0.95        73\n",
+      "         130       1.00      1.00      1.00       127\n",
+      "\n",
+      "    accuracy                           0.98       441\n",
+      "   macro avg       0.98      0.98      0.97       441\n",
+      "weighted avg       0.98      0.98      0.98       441\n",
+      "\n",
+      "Confusion Matrix - Hydraulic Acc:\n",
+      "[[150   1   2   0]\n",
+      " [  1  87   0   0]\n",
+      " [  0   5  68   0]\n",
+      " [  0   0   0 127]]\n",
+      "\n",
+      "\n",
+      "Classification Report - Stable Flag:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      1.00      0.99       299\n",
+      "           1       1.00      0.95      0.97       142\n",
+      "\n",
+      "    accuracy                           0.98       441\n",
+      "   macro avg       0.99      0.98      0.98       441\n",
+      "weighted avg       0.98      0.98      0.98       441\n",
+      "\n",
+      "Confusion Matrix - Stable Flag:\n",
+      "[[299   0]\n",
+      " [  7 135]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Classification Report - Cooler Condition:\")\n",
+    "print(report_cooler)\n",
+    "print(\"Confusion Matrix - Cooler Condition:\")\n",
+    "print(matrix_cooler)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Valve Condition:\")\n",
+    "print(report_valve)\n",
+    "print(\"Confusion Matrix - Valve Condition:\")\n",
+    "print(matrix_valve)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Pump Leak:\")\n",
+    "print(report_pump)\n",
+    "print(\"Confusion Matrix - Pump Leak:\")\n",
+    "print(matrix_pump)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Hydraulic Acc:\")\n",
+    "print(report_hydraulic)\n",
+    "print(\"Confusion Matrix - Hydraulic Acc:\")\n",
+    "print(matrix_hydraulic)\n",
+    "print(\"\\n\")\n",
+    "\n",
+    "print(\"Classification Report - Stable Flag:\")\n",
+    "print(report_stable)\n",
+    "print(\"Confusion Matrix - Stable Flag:\")\n",
+    "print(matrix_stable)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "994b7e36",
+   "id": "3e264fd4",
    "metadata": {},
    "outputs": [],
    "source": []
